@@ -740,6 +740,7 @@ static void print_otherptr(lispobj obj)
             // FIXME: This case looks unreachable. print_struct() does it
             case INSTANCE_HEADER_WIDETAG:
                 NEWLINE_OR_RETURN;
+                count &= SHORT_HEADER_MAX_WORDS;
                 printf("length = %ld", (long) count);
                 index = 0;
                 while (count-- > 0) {
