@@ -21,6 +21,9 @@ changes relative to sbcl-1.3.10:
     It is conceivable that some applications might be adversely affected.
     Please see ':immobile-space' in 'base-target-features.lisp-expr'
     for further details, and possible reasons to disable this feature.
+  * enhancement: x86-64 supports shrinking the fixed overhead in a structure
+    from 2 words to 1 word, reducing memory consumption in applications
+    which create many small structures.
 
 changes in sbcl-1.3.10 relative to sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
